# cleverweb-utils

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
src/cleverwebutils/: func.py
